<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4293d3"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/saveBtn"
            android:layout_width="65dp"
            android:layout_height="45dp"
           android:src="@drawable/save_icon"
            android:layout_gravity="center_horizontal"
            android:onClick="saveAddress"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addr_name"
            android:layout_weight="1.5"
            android:textSize="15sp"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:hint="Required"
            android:textIsSelectable="false"
            android:backgroundTint="#000000" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/addr_phn"
            android:textSize="15sp"
            android:textColor="#000000"
            />
        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:backgroundTint="#000000"
            android:inputType="numberDecimal"
            android:hint="@string/addr_phnhi"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addr_email"
            android:layout_weight="1.5"
            android:textSize="15sp"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:backgroundTint="#000000"
            android:hint="@string/addr_emailhi"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addr_addr"
            android:layout_weight="1.5"
            android:textSize="15sp"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/streetEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:backgroundTint="#000000"
            android:maxLines="1"
            android:hint="@string/addr_addrhi"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addr_zip"
            android:layout_weight="1.5"
            android:textSize="15sp"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/zipEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:backgroundTint="#000000"
            android:hint="@string/addr_ziphi"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addr_city"
            android:layout_weight="1.5"
            android:textSize="15sp"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/cityEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:backgroundTint="#000000"
            android:hint="@string/addr_cityhi"/>
    </LinearLayout>
    

</LinearLayout>