<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4293d3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center">
            <ImageButton
                android:onClick="updateAddressInDatabase"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:src="@drawable/update_icon"
                android:layout_marginRight="45dp"
                android:layout_marginLeft="5dp" />
            <ImageButton
                android:onClick="deleteAddressFromDatabase"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:src="@drawable/delete_icon"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="5dp"
                />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/addr_phnhi"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:inputType="numberDecimal"/>
        <ImageButton
            android:onClick="dialCall"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/dial_icon"
            android:layout_weight="1"
            android:layout_marginRight="2dp"/>
        <ImageButton
            android:onClick="sendSMS"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/sms_icon"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="1dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addr_emailhi"
            android:layout_weight="1.5"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:textColor="#000000"
            android:hint="@string/addr_email"

            android:textSize="15sp"
            android:maxLines="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addr_addr"
            android:layout_weight="1.5"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#000000" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:textColor="#000000"
            android:id="@+id/streetEditText"
            android:hint="@string/addr_addrhi"
            android:textSize="15sp"
            android:maxLines="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addr_zip"
            android:layout_weight="1.5"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/zipEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:textColor="#000000"
            android:hint="@string/addr_ziphi"
            android:textSize="15sp"

            android:maxLines="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addr_city"
            android:layout_weight="1.5"
            android:textSize="15sp"
            android:textColor="#000000"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/cityEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:textColor="#000000"
            android:hint="@string/addr_cityhi"
            android:textSize="15sp"/>
    </LinearLayout>
    



</LinearLayout>